Revert "refactor: extract layout widths into CSS variables, fix p display hack, fix navbar flicker"
This reverts commit 963be0c94e2be25b86deb33e1a13854cc9ecdd9f.

--- a/style.css
+++ b/style.css
@@ -12,11 +12,6 @@
     --veond: #C2E678;
     --eatsypeasy: #F0AD64;
     --spotify: #A4C9D8;
-    --width-xl: 1000px;
-    --width-l: 830px;
-    --width-m: 660px;
-    --width-s: 490px;
-    --width-mobile: 326px;
 }
 
 a {
@@ -79,6 +74,7 @@ h6 {
 }
 
 p{
+    display: inline !important;
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
     line-height: 24px;
@@ -157,7 +153,7 @@ header.hide {
     justify-content: space-between;
     align-items: center;
     padding: 20px 40px;
-    max-width: var(--width-xl);
+    max-width: 1000px;
     margin: 0px auto;
 }
 
@@ -175,7 +171,7 @@ main {
     align-items: flex-start;
     gap: 24px;
     margin: 0px auto;
-    max-width: var(--width-l);
+    max-width: 830px;
     padding-top: 112px;
 }
 
@@ -185,7 +181,7 @@ main {
     align-items: center;
     gap: 48px;
     margin: 0px auto;
-    max-width: var(--width-l);
+    max-width: 830px;
     margin-top: 128px;
 }
 
@@ -194,7 +190,7 @@ main {
     flex-direction: row;
     align-items: center;
     padding: 0px 24px 0px 0px;
-    max-width: var(--width-l);
+    max-width: 830px;
     gap: 85px;
 }
 
@@ -229,7 +225,7 @@ article img {
     align-items: center;
     padding: 16px 24px;
     gap: 16px;
-    max-width: var(--width-xl);
+    max-width: 1000px;
     margin: 80px auto 0px;
 }
 
@@ -256,7 +252,7 @@ footer p {
 }
 
 .about-img img {
-    width: var(--width-l);
+    width: 830px;
     display: block;
     margin: 40px auto 0px;
 }
@@ -275,7 +271,7 @@ footer p {
     align-items: center;
     gap: 54px;
     margin: 0px auto;
-    max-width: var(--width-xl);
+    max-width: 1000px;
 }
 
 .case-box {
@@ -285,7 +281,7 @@ footer p {
     padding: 16px;
     gap: 24px;
     margin: 0px auto;
-    width: var(--width-l);
+    width: 830px;
     background: var(--lightgray);
 }
 
@@ -310,7 +306,7 @@ footer p {
     justify-content: center;
     align-items: flex-start;
     gap: 32px;
-    max-width: var(--width-xl);
+    max-width: 1000px;
     margin: 0px auto;
 }
 
@@ -320,7 +316,7 @@ footer p {
     justify-content: center;
     align-items: flex-start;
     gap: 32px;
-    max-width: var(--width-l);
+    max-width: 830px;
     margin: 0px auto;
 }
 
@@ -330,7 +326,7 @@ footer p {
     justify-content: center;
     align-items: flex-start;
     gap: 32px;
-    max-width: var(--width-m);
+    max-width: 660px;
     padding: 0px 85px;
 }
 
@@ -340,28 +336,28 @@ footer p {
     justify-content: center;
     align-items: flex-start;
     gap: 32px;
-    max-width: var(--width-s);
+    max-width: 490px;
     padding: 0px 170px;
 }
 
 .case-image-m img{
     display: block;
     width: 100%;
-    max-width: var(--width-m);
+    max-width: 660px;
     margin: 0px auto;
 }
 
 .case-image-l img{
     display: block;
     width: 100%;
-    max-width: var(--width-l);
+    max-width: 830px;
     margin: 0px auto;
 }
 
 .case-image-xl img{
     display: block;
     width: 100%;
-    max-width: var(--width-xl);
+    max-width: 1000px;
     margin: 0px auto;
 }
 
@@ -451,7 +447,7 @@ iframe {
     main {
         gap: 16px;
         margin: 0px auto;
-        max-width: var(--width-mobile);
+        max-width: 326px;
     }
 
     .case-studies {
@@ -459,7 +455,7 @@ iframe {
         align-items: flex-start;
         gap: 16px;
         margin: 0px auto;
-        max-width: var(--width-mobile);
+        max-width: 326px;
         margin-top: 40px;
     }
     
@@ -469,11 +465,11 @@ iframe {
         align-items: flex-start;
         padding: 0px;
         gap: 0px;
-        max-width: var(--width-mobile);
+        max-width: 326px;
     }
     
     article img {
-        width: var(--width-mobile);
+        width: 326px;
     }
 
     .card-info {
@@ -483,7 +479,7 @@ iframe {
     .contact {
         padding: 0px;
         gap: 8px;
-        max-width: var(--width-xl);
+        max-width: 1000px;
         margin: 40px auto 0px;
     }
     
@@ -498,7 +494,7 @@ iframe {
     }
 
     .about-img img {
-        width: var(--width-mobile);
+        width: 326px;
         display: block;
         margin: 40px auto 0px;
     }
@@ -506,7 +502,7 @@ iframe {
     .content-wrapper {
         gap: 40px;
         margin: 0px auto;
-        max-width: var(--width-mobile);
+        max-width: 326px;
     }
 
     .case-box {
@@ -526,29 +522,29 @@ iframe {
         justify-content: center;
         align-items: flex-start;
         gap: 32px;
-        max-width: var(--width-xl);
+        max-width: 1000px;
     }
 
     .case-block-l {
         gap: 16px;
-        max-width: var(--width-mobile);
+        max-width: 326px;
     }
 
     .case-block-m {
         gap: 16px;
-        max-width: var(--width-mobile);
+        max-width: 326px;
         padding: 0px;
     }
 
     .case-block-s {
         gap: 16px;
-        max-width: var(--width-mobile);
+        max-width: 326px;
         padding: 0px;
     }
 
     iframe {
         display: block;
-        max-width: var(--width-mobile);
+        max-width: 326px;
 
     }
 }
